--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             </div>
         </div>
     </div>
-
+    <div class="footer">
+        <p>AUTOR: GUILHERME SACILOTTO</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
