--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>Seu pedido está a caminho!</p>
         </div>
         <div id="initial-message" class="message-box">
-            <h2>Bem-vindo ao nosso Restaurante!</h2>
+            <h2>Bem vindo ao nosso Restaurante!</h2>
             <p>Deseja um cardápio físico?</p>
             <div class="button-container">
                 <button onclick="showPhysicalMenu()">Sim</button>
